:pushpin: Adicionando opção de cancelar ação em todas as telas de cadastro

--- a/templates/core/vendafiado/criar.html
+++ b/templates/core/vendafiado/criar.html
@@ -24,7 +24,8 @@
             {% endfor %}
         </div>
         <div class="d-grid gap-2 col-6 mx-auto mt-3 mb-2">
-            <button type="submit" class="btn btn-success rounded-pill">Finalizar Venda</button>
+            <button type="submit" class="btn btn-success rounded-pill">Cadastrar Venda</button>
+            <button type="button" onclick="history.back()" class="btn btn-danger rounded-pill">Cancelar</button>
         </div>
     </form>
 </div>
