--- a/templates/core/venda/cadastrar_venda.html
+++ b/templates/core/venda/cadastrar_venda.html
@@ -27,6 +27,7 @@
             <button type="button" class="btn btn-primary btn-sm mb-3" id="add-formset-row">Adicionar Produto</button>
             <div class="d-grid gap-2 col-6 mx-auto mt-3 mb-2">
                 <button type="submit" class="btn btn-success rounded-pill">Cadastrar Venda</button>
+                <button type="button" onclick="history.back()" class="btn btn-danger rounded-pill">Cancelar</button>
             </div>
         </form>
     </div>
