--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -233,6 +233,15 @@
                                         <li><a class="dropdown-item" href="{% url 'lista_clientes' %}"><i class="bi bi-people"></i> Clientes</a></li>
                                     </ul>
                                 </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="bi bi-cash-stack"></i> Vendas a Prazo
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="{% url 'nova_venda_fiado' %}"><i class="bi bi-cash-stack"></i> Cadastrar</a></li>
+                                        <li><a class="dropdown-item" href="{% url 'listar_vendas_fiado' %}"><i class="bi bi-cash-stack"></i> Listar</a></li>
+                                    </ul>
+                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'relatorios_home' %}"><i class="bi bi-bar-chart-line"></i> Relatórios</a>
                                 </li>
@@ -318,7 +327,7 @@
                     </ul>
                     <h6 class="mt-3 text-secondary"><i class="bi bi-clock-history"></i> Vendas a Prazo</h6>
                     <ul class="list-group mb-2">
-                        <a class="list-group-item list-group-item-action d-flex align-items-center" href="{% url 'listar_vendas_fiado' %}"><i class="bi bi-plus-circle me-2 text-success"></i> Cadastrar Vendas a Prazo</a>
+                        <a class="list-group-item list-group-item-action d-flex align-items-center" href="{% url 'nova_venda_fiado' %}"><i class="bi bi-plus-circle me-2 text-success"></i> Cadastrar Vendas a Prazo</a> 
                         <a class="list-group-item list-group-item-action d-flex align-items-center mt-1" href="{% url 'listar_vendas_fiado' %}"><i class="bi bi-list-ul me-2 text-warning"></i> Listar Vendas a Prazo</a>
                     </ul>
                     <h6 class="mt-3 text-secondary"><i class="bi bi-bar-chart-line"></i> Relatórios</h6>
